force-app/main/default/objects/Hospital__c/Hospital__c.object-meta.xml
<CustomObject>
    <label>Hospital</label>
    <nameField>
        <displayFormat>HSP-{0000}</displayFormat>
        <label>Hospitals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hospitals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>