force-app/main/default/objects/Hospital__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Super Speciality</fullName>
            </value>
            <value>
                <fullName>Multi Speciality</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Speciality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>