force-app/main/default/objects/Hospital__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Hospitals</relationshipLabel>
    <relationshipName>Hospitals</relationshipName>
    <type>Lookup</type>
</CustomField>