force-app/main/default/objects/Hospital__c/fields/HospitalContact__c.field-meta.xml
<CustomField>
    <fullName>HospitalContact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HospitalContact</label>
    <type>Phone</type>
</CustomField>