force-app/main/default/objects/Hospital__c/fields/HospitalLocCoordinates__c.field-meta.xml
<CustomField>
    <fullName>HospitalLocCoordinates__c</fullName>
    <label>HospitalLocCoordinates</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>