force-app/main/default/objects/Hospital__c/fields/HospitalName__c.field-meta.xml
<CustomField>
    <fullName>HospitalName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HospitalName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>